--- a/_posts/2025-02-10-welcome.md
+++ b/_posts/2025-02-10-welcome.md
@@ -1,6 +1,6 @@
 ---
 title: Welcome
-author: Joost
+author: joost
 date: 2025-02-10 14:00:00 +0100
 categories: 
 tags: 
@@ -8,3 +8,11 @@ render_with_liquid: false
 toc: false
 comments: false
 ---
+
+#Welcome
+
+Hi there, this will be my collection of scripts/configuration files and other homelabbing information.
+
+#About me
+
+Currently working in DevOps, mostly Unix related topics. Working in IT for about 5 years and been homelabbing since forever.
